// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateChannelModal renders closed component 1`] = `
<Component
  addBorder={false}
  alignCloseLeft={false}
  canGoBack={false}
  contentWidth={600}
  fullPage={true}
  handleClose={[MockFunction]}
  isBold={false}
  isCloseDisabled={false}
  open={false}
  title=""
>
  <WithStyles(ForwardRef(Grid))
    className="root-mock"
  >
    <Connect(Component) />
  </WithStyles(ForwardRef(Grid))>
</Component>
`;

exports[`CreateChannelModal renders component 1`] = `
<Component
  addBorder={false}
  alignCloseLeft={false}
  canGoBack={false}
  contentWidth={600}
  fullPage={true}
  handleClose={[MockFunction]}
  isBold={false}
  isCloseDisabled={false}
  open={true}
  title=""
>
  <WithStyles(ForwardRef(Grid))
    className="root-mock"
  >
    <Connect(Component) />
  </WithStyles(ForwardRef(Grid))>
</Component>
`;
